Got rid of title format to look better on github

--- a/R Markdown capstone proposal.Rmd
+++ b/R Markdown capstone proposal.Rmd
@@ -1,8 +1,5 @@
----
-title: "Employment and Education Opportunities in High Crime Cities"
-author: "Andre Velez"
-output: github_document
----
+# __Employment and Education Opportunities in High Crime Cities__
+
 
 ## __Focus__
 _What correlation does crime have on unemployment and educational opportunities? What effect is there on the economic mobility of a citizen who lives in these areas?_ 
